[gd_scene load_steps=7 format=3 uid="uid://bkvv1xdrmnxkj"]

[ext_resource type="Script" uid="uid://cnquios5860dx" path="res://scene/enemy2.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://1pxd58ov5bl5" path="res://scene/enemyprofil.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bsvpdr18fq62y" path="res://scene/enemyface.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cmej61e1yjgfk" path="res://scene/enemyataque.png" id="4"]
[ext_resource type="PackedScene" uid="uid://healthbar" path="res://Player/HealthBar/HealthBar.tscn" id="5_2yure"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4")
}],
"loop": true,
"name": &"attaque",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[node name="scormard" type="CharacterBody2D" groups=["Enemies"]]
position = Vector2(712.318, 417.911)
collision_layer = 8
collision_mask = 3
script = ExtResource("1")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0.682007, -0.911011)
scale = Vector2(0.464567, 0.491609)
sprite_frames = SubResource("1")
animation = &"walk"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(56.8973, -89.0485)
collision_layer = 8
collision_mask = 131

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(-56.8973, 89.0485)
polygon = PackedVector2Array(-14.318, 16.089, -29.318, 32.089, -26.318, 17.089, -33.318, 16.089, -48.318, 30.089, -48.318, 64.089, -32.318, 81.089, -14.318, 83.089, 2.68201, 78.089, 12.682, 70.089, 38.682, 72.089, 57.682, 68.089, 69.682, 61.089, 71.682, 52.089, 86.682, 37.089, 89.682, 18.089, 93.682, -2.91101, 98.682, -24.911, 90.682, -40.911, 85.682, -65.911, 80.682, -84.911, 68.682, -95.911, 50.682, -99.911, 35.682, -93.911, 26.682, -81.911, 29.682, -67.911, 34.682, -79.911, 43.682, -76.911, 50.682, -63.911, 63.682, -62.911, 73.682, -62.911, 69.682, -49.911, 73.682, -27.911, 69.682, -7.91101, 68.682, 13.089, 70.682, 25.089, 58.682, 34.089, 45.682, 28.089, 33.682, 24.089, 29.682, 26.089, 10.682, 24.089, -1.31799, 16.089, -11.318, 16.089)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
position = Vector2(2.68201, 0.0889893)
polygon = PackedVector2Array(-14.318, 16.089, -29.318, 32.089, -26.318, 17.089, -33.318, 16.089, -48.318, 30.089, -48.318, 64.089, -32.318, 81.089, -14.318, 83.089, 2.68201, 78.089, 12.682, 70.089, 38.682, 72.089, 57.682, 68.089, 69.682, 61.089, 71.682, 52.089, 86.682, 37.089, 89.682, 18.089, 93.682, -2.91101, 98.682, -24.911, 90.682, -40.911, 85.682, -65.911, 80.682, -84.911, 68.682, -95.911, 50.682, -99.911, 35.682, -93.911, 26.682, -81.911, 29.682, -67.911, 34.682, -79.911, 43.682, -76.911, 50.682, -63.911, 63.682, -62.911, 73.682, -62.911, 69.682, -49.911, 73.682, -27.911, 69.682, -7.91101, 68.682, 13.089, 70.682, 25.089, 58.682, 34.089, 45.682, 28.089, 33.682, 24.089, 29.682, 26.089, 10.682, 24.089, -1.31799, 16.089, -11.318, 16.089)

[node name="HPBar" type="TextureProgressBar" parent="."]
value = 100.0
nine_patch_stretch = true

[node name="HealthBar" parent="." instance=ExtResource("5_2yure")]
position = Vector2(-54.318, -127.911)
scale = Vector2(1.45569, 0.56)

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
